fix spacing issues on desktop and mobile, change box-shadow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -529,8 +529,6 @@ header .crafted__right-arrow {
 }
 
 .meet {
-  max-width: 90%;
-  margin: auto;
   margin-top: 50px;
   margin-bottom: 50px;
   display: flex;
@@ -550,14 +548,33 @@ header .crafted__right-arrow {
   color: #0f65f1;
 }
 .meet .meet__images {
-  max-width: 90%;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
+@media (max-width: 576px) {
+  .meet .meet__images {
+    flex-wrap: wrap;
+  }
+}
 .meet .meet__images img {
-  width: 95%;
+  width: 100%;
+}
+.meet .meet__images .meet__image {
+  box-shadow: 0 8px 16px 0 rgba(72, 127, 255, 0.1);
+  margin-top: 2rem;
+}
+.meet .meet__images .meet__image .header {
+  padding-top: 0.5rem;
+  padding-bottom: 1rem;
+}
+.meet .meet__images .meet__image .header h3 {
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+.meet .meet__images .meet__image .header h4 {
+  font-weight: 400;
+  font-size: 0.8rem;
 }
 
 @media (min-width: 576px) {
@@ -570,24 +587,13 @@ header .crafted__right-arrow {
     margin-top: 30px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     gap: 1.2rem;
     font-size: 0.7rem;
   }
   .meet__images .meet__image {
-    width: 30%;
-    box-shadow: 0px 2px 2px 2px #faf7f7;
-  }
-  .meet__images .meet__image .header {
-    padding-top: 0.5rem;
-    padding-bottom: 1rem;
-  }
-  .meet__images .meet__image .header h3 {
-    font-weight: 500;
-    font-size: 1rem;
-  }
-  .meet__images .meet__image .header h4 {
-    font-weight: 400;
-    font-size: 0.7rem;
+    width: 33.3333333333%;
+    margin-top: 0px;
   }
 }
 .map-container {
